--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,21 +28,20 @@
         android:id="@+id/btn_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
+        android:layout_marginBottom="@dimen/btn_marginToBottom"
         android:backgroundTint="@color/black"
         android:text="@string/add_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lv_notesmain"
+        app:layout_constraintTop_toBottomOf="@+id/lv_notesMain"
         app:layout_constraintVertical_bias="0.4" />
 
     <ListView
-        android:id="@+id/lv_notesmain"
+        android:id="@+id/lv_notesMain"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
